# grasper

./: .gitignore  README.md
design-rollup/figma-plugin/: README.md  code.js  manifest.json  package.json  ui.html
design-rollup/frontend/: bridge.js  index.html  package-lock.json  package.json
design-rollup/frontend/src/: main.ts
design-rollup/simulation/: Cargo.toml
design-rollup/simulation/src/: lib.rs  tests.rs
education-app/: .gcloudignore  index.html  package.json  server.js  titles.json  vite.config.ts
education-app/src/: App.css  App.tsx  index.css
education-app/src/animation/: glassMath.ts
education-app/src/components/GlassblowPlayer/: GlassblowPlayer.tsx  TestPlayerView.tsx
frontend/: index.html  package-lock.json  package.json
frontend/src/: main.ts  starter-scene.ts  vite-env.d.ts
gathering/frontend/: index.html  package.json
gathering/frontend/src/: starter-scene.ts
gathering/simulation/src/: lib.rs
learning/experiments/: transformer_scratch.ipynb
simulation/: Cargo.toml
simulation/src/: lib.rs
