[package]
name = "simulation"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
instant = { version = "0.1", features = ["wasm-bindgen"] }
js-sys = "0.3"
rayon = "1.8"
wasm-bindgen = "0.2"

[profile.release]
lto = true
opt-level = "z"
codegen-units = 1
panic = 'abort'

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
]
